execution-plan-macros/src/snapshots/kittycad_execution_plan_macros__derive_value__tests__enum.snap
---
source: execution-plan-macros/src/derive_value.rs
expression: formatted
---
impl ::kittycad_execution_plan_traits::Value for FooEnum {
    fn into_parts(self) -> Vec<::kittycad_execution_plan_traits::Primitive> {
        match self {
            FooEnum::A { x } => {
                let mut parts = Vec::new();
                let tag = stringify!(A).to_owned();
                parts.push(::kittycad_execution_plan_traits::Primitive::from(tag));
                parts.extend(x.into_parts());
                parts
            }
            FooEnum::B { y } => {
                let mut parts = Vec::new();
                let tag = stringify!(B).to_owned();
                parts.push(::kittycad_execution_plan_traits::Primitive::from(tag));
                parts.extend(y.into_parts());
                parts
            }
            FooEnum::C(field0, field1) => {
                let mut parts = Vec::new();
                let tag = stringify!(C).to_owned();
                parts.push(::kittycad_execution_plan_traits::Primitive::from(tag));
                parts.extend(field0.into_parts());
                parts.extend(field1.into_parts());
                parts
            }
            FooEnum::D => {
                let tag = stringify!(D).to_owned();
                let part = ::kittycad_execution_plan_traits::Primitive::from(tag);
                vec![part]
            }
        }
    }

    fn from_parts<I>(
        values: &mut I,
    ) -> Result<(Self, usize), ::kittycad_execution_plan_traits::MemoryError>
    where
        I: Iterator<Item = Option<::kittycad_execution_plan_traits::Primitive>>,
    {
        let (variant_name, mut count) = String::from_parts(values)?;
        match variant_name.as_str() {
            stringify!(A) => {
                let (x, c) = usize::from_parts(values)?;
                count += c;
                Ok((Self::A { x }, count))
            }
            stringify!(B) => {
                let (y, c) = usize::from_parts(values)?;
                count += c;
                Ok((Self::B { y }, count))
            }
            stringify!(C) => {
                let (field0, c) = usize::from_parts(values)?;
                count += c;
                let (field1, c) = String::from_parts(values)?;
                count += c;
                Ok((Self::C(field0, field1), count))
            }
            stringify!(D) => Ok((Self::D, count)),
            other => Err(
                ::kittycad_execution_plan_traits::MemoryError::InvalidEnumVariant {
                    expected_type: stringify!(FooEnum).to_owned(),
                    actual: other.to_owned(),
                    valid_variants: vec!["A", "B", "C", "D"],
                },
            ),
        }
    }
}

