execution-plan-macros/src/snapshots/kittycad_execution_plan_macros__derive_value__tests__struct.snap
---
source: execution-plan-macros/src/derive_value.rs
expression: formatted
---
impl ::kittycad_execution_plan_traits::Value for Line {
    fn into_parts(self) -> Vec<::kittycad_execution_plan_traits::Primitive> {
        let mut parts = Vec::new();
        parts.extend(self.point.into_parts());
        parts.extend(self.tag.into_parts());
        parts
    }

    fn from_parts<I>(
        values: &mut I,
    ) -> Result<(Self, usize), ::kittycad_execution_plan_traits::MemoryError>
    where
        I: Iterator<Item = Option<::kittycad_execution_plan_traits::Primitive>>,
    {
        let mut count = 0;
        let (point, c) = ::kittycad_execution_plan_traits::Value::from_parts(values)?;
        count += c;
        let (tag, c) = ::kittycad_execution_plan_traits::Value::from_parts(values)?;
        count += c;
        let slf = Self { point, tag };
        Ok((slf, count))
    }
}

