execution-plan-macros/src/snapshots/kittycad_execution_plan_macros__derive_value__tests__struct_wrapper.snap
---
source: execution-plan-macros/src/derive_value.rs
expression: formatted
---
impl ::kittycad_execution_plan_traits::Value for Unit {
    fn into_parts(self) -> Vec<::kittycad_execution_plan_traits::Primitive> {
        let mut parts = Vec::new();
        parts.extend(self.0.into_parts());
        parts
    }

    fn from_parts<I>(
        values: &mut I,
    ) -> Result<(Self, usize), ::kittycad_execution_plan_traits::MemoryError>
    where
        I: Iterator<Item = Option<::kittycad_execution_plan_traits::Primitive>>,
    {
        let mut count = 0;
        let (field0, c) = ::kittycad_execution_plan_traits::Value::from_parts(values)?;
        count += c;
        Ok((Self(field0), count))
    }
}

